# ocaml-nix-cross-test

./: .gitignore  README.md  default.nix  flake.nix
cross_test/: dune  dune-project  dune-workspace
cross_test/bin-no-ctypes/: dune  main.ml
cross_test/lib/: dune
cross_test/test/: dune
scripts/: repl.sh  upload.sh
